Start working on analysis, build AST from DTOs
